--- a/style.css
+++ b/style.css
@@ -4,6 +4,16 @@
     width:1366px;
     position: relative;
 }
+
+@media (min-width:300px) and (max-width:800px){
+    .container{
+        background-color:#3D087B;
+        height: 1500px;
+        width:100vw;
+        position: relative;
+}
+}
+
 .clock{
     width:203px;
     height:77px;
@@ -11,16 +21,40 @@
     top:10px;
     left:124px;
 }
+
+@media (min-width:300px) and (max-width:800px){
+    .clock{
+        width:403px;
+        height:277px;
+        position: absolute;
+        top:10px;
+        left:10px;
+    }
+}
 .white{
     height:363px;
     width:566px;
     background-color: white;
     margin:10px;
-    border-radius: 10px;;
+    border-radius: 10px;
     position: absolute;
     top: 100px;
     left:124px;
 
+}
+@media (min-width:300px) and (max-width:800px){
+    .white{
+        height:363px;
+        width:335px;
+        background-color: white;
+        margin:10px;
+        border-radius: 10px;
+        position: absolute;
+        top: 100px;
+        left:10px;
+    }
+    
+    
 }
 .wakeup{
     position: absolute;
@@ -29,12 +63,30 @@
     color:#3D087B;
 
 }
+@media (min-width:300px) and (max-width:800px){
+    .wakeup{
+        position: absolute;
+        left:10px;
+        top:20px;
+        color:#3D087B;
+    
+    }
+}
 .wake{
     position:absolute;
     top:30px;
     left:80px;
     font-size: 20px;
     color:#3D087B;
+}
+@media (min-width:300px) and (max-width:800px){
+    .wake{
+        position:absolute;
+        top:26px;
+        left:58px;
+        font-size: 20px;
+        color:#3D087B;
+    }
 }
 .wa{
     width:281px;
@@ -44,6 +96,16 @@
     left:250px;
     color:#3D087B;
 }
+@media (min-width:300px) and (max-width:800px){
+    .wa{
+        width:105px;
+        height:40px;
+        position:absolute;
+        top:14px;
+        left:210px;
+        color:#3D087B;
+    }
+}
 .lunch{
     position: absolute;
     left:25px;
@@ -51,12 +113,30 @@
     color:#3D087B;
 
 }
+@media (min-width:300px) and (max-width:800px){
+    .lunch{
+        position: absolute;
+        left:10px;
+        top:111px;
+        color:#3D087B;
+    
+    }
+}
 .lunch1{
     position:absolute;
     top:120px;
     left:80px;
     font-size: 20px;
     color:#3D087B;
+}
+@media (min-width:300px) and (max-width:800px){
+    .lunch1{
+        position:absolute;
+        top:120px;
+        left:58px;
+        font-size: 20px;
+        color:#3D087B;
+    }
 }
 .lunch2{
     width:281px;
@@ -66,6 +146,17 @@
     left:250px;
     color:#3D087B;
 }
+@media (min-width:300px) and (max-width:800px){
+    .lunch2{
+        width:105px;
+        height:40px;
+        position:absolute;
+        top:111px;
+        left:210px;
+        color:#3D087B;
+    }
+    
+}
 .nap{
     position: absolute;
     left:25px;
@@ -73,12 +164,30 @@
     color:#3D087B;
 
 }
+@media (min-width:300px) and (max-width:800px){
+    .nap{
+        position: absolute;
+        left:10px;
+        top:215px;
+        color:#3D087B;
+    
+    }
+}
 .nap1{
     position:absolute;
     top:215px;
     left:80px;
     font-size: 20px;
     color:#3D087B;
+}
+@media (min-width:300px) and (max-width:800px){
+    .nap1{
+        position:absolute;
+        top:215px;
+        left:58px;
+        font-size: 20px;
+        color:#3D087B;
+    }
 }
 .nap2{
     width:281px;
@@ -88,12 +197,31 @@
     left:250px;
     color:#3D087B;
 }
+@media (min-width:300px) and (max-width:800px){
+    .nap2{
+        width:105px;
+        height:40px;
+        position:absolute;
+        top:210px;
+        left:210px;
+        color:#3D087B;
+    }
+}
 .right{
     position: absolute;
     left:25px;
     top:300px;
     color:#3D087B;
 
+}
+@media (min-width:300px) and (max-width:800px){
+    .right{
+        position: absolute;
+        left:10px;
+        top:300px;
+        color:#3D087B;
+    
+    }
 }
 .right1{
     position:absolute;
@@ -102,6 +230,15 @@
     font-size: 20px;
     color:#3D087B;
 }
+@media (min-width:300px) and (max-width:800px){
+    .right1{
+        position:absolute;
+        top:300px;
+        left:58px;
+        font-size: 20px;
+        color:#3D087B;
+    }
+}
 .right2{
     width:281px;
     height:45px;
@@ -109,6 +246,16 @@
     top:300px;
     left:250px;
     color:#3D087B;
+}
+@media (min-width:300px) and (max-width:800px){
+    .right2{
+        width:105px;
+        height:40px;
+        position:absolute;
+        top:300px;
+        left:210px;
+        color:#3D087B;
+    }
 }
 .good{
  width: 566px;   
@@ -121,6 +268,20 @@
  top:527px;
  left:124px;
 }
+@media (min-width:300px) and (max-width:800px){
+
+.good{
+ width: 340px;   
+ height: 77px;
+ border-radius: 10px;
+ border:black solid 1px;
+ background-color:#FFFFFF ;
+ opacity: 23%;
+ position: absolute;
+ top:527px;
+ left:20px;
+} 
+}
 .good1{
      text-align: left;
      
@@ -129,6 +290,17 @@
      left:140px;
      color: #FFFFFF;
      font: normal normal 900 27px/34px Bauhaus Hv BT;
+    }
+    @media (min-width:300px) and (max-width:800px){
+        .good1{
+            text-align: left;
+            
+            position: absolute;
+            top:528px;
+            left:25px;
+            color: #FFFFFF;
+            font: normal normal 900 22px/28px Bauhaus Hv BT;
+           }
     }
 .alaram{
     width:299px;
@@ -143,18 +315,24 @@
     text-align: center;
     color:white;
 }
-.last1{
-    font: var(--unnamed-font-style-normal) normal bold 15px/25px var(--unnamed-font-family-manrope);
-letter-spacing: var(--unnamed-character-spacing-0);
-text-align: left;
-font: normal normal bold 15px/25px Manrope;
-letter-spacing: 0px;
-color: #F25CFE;
-opacity: 1;
-position: absolute;
-    top:615px;
-    left:450px;
+
+@media(min-width:300px) and (max-width:800px){
+    .alaram{
+        width:170px;
+        height:50px;
+        background-image: linear-gradient(#6E54EC, #CB52F8, #FC5EFF, #F1A7C5);
+        border:black solid 1px;
+        position: absolute;
+        top:635px;
+        left:25px;
+        border-radius: 5px;
+        font: normal normal 600 24px/38px Manrope;
+        text-align: center;
+        color:white;
+    }
 }
+
+
     
     
 
@@ -166,6 +344,43 @@ position: absolute;
     left:437px;
     background-color:#FFFFFF;
     opacity:23%;
+}
+@media(min-width:300px) and (max-width:800px){
+    .last{
+        height:155px;
+        width:170px;
+        position:absolute;
+        top:620px;
+        left:200px;
+        background-color:#FFFFFF;
+        opacity:23%;
+    }
+}
+.last1{
+    font: var(--unnamed-font-style-normal) normal bold 15px/25px var(--unnamed-font-family-manrope);
+letter-spacing: var(--unnamed-character-spacing-0);
+text-align: left;
+font: normal normal bold 15px/25px Manrope;
+letter-spacing: 0px;
+color: #F25CFE;
+opacity: 1;
+position: absolute;
+    top:615px;
+    left:455px;
+}
+@media(min-width:300px) and (max-width:800px){
+    .last1{
+        font: var(--unnamed-font-style-normal) normal bold 15px/25px var(--unnamed-font-family-manrope);
+    letter-spacing: var(--unnamed-character-spacing-0);
+    text-align: left;
+    font: normal normal bold 15px/25px Manrope;
+    letter-spacing: 0px;
+    color: #F25CFE;
+    opacity: 1;
+    position: absolute;
+        top:615px;
+        left:200px;
+    }
 }
 
 .layer1{
@@ -180,6 +395,19 @@ top: 67px;
 left: 825px;
 }
 
+@media(min-width:300px) and (max-width:800px){
+    .layer1{
+        height:130px;
+        width:255px;
+        background: var(--unnamed-color-ffffff) 0% 0% no-repeat padding-box;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border-radius: 10px;
+    opacity: 0.22;
+    position: absolute;
+    top:840px;
+    left: 70px;
+    }
+}
 .layer2{
     width: 416px;
 height: 130px;
@@ -191,7 +419,20 @@ position: absolute;
 top: 55px;
 left: 806px;
 }
-
+@media(min-width:300px) and (max-width:800px){
+    .layer2{
+        width: 295px;
+    height: 130px;
+    background: var(--unnamed-color-ffffff) 0% 0% no-repeat padding-box;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border-radius: 10px;
+    opacity: 0.71;
+    position: absolute;
+    top: 820px;
+    left:50px;
+    }
+    
+}
 .layer3{
 width: 536px;
 height: 130px;
@@ -206,7 +447,23 @@ top: 42px;
 left: 746px;
 color:#3D087B;
 }
-
+@media(min-width:300px) and (max-width:800px){
+    .layer3{
+        width: 335px;
+        height: 130px;
+        background: var(--unnamed-color-ffffff) 0% 0% no-repeat padding-box;
+        border: 1px solid var(--unnamed-color-ededed);
+        background: #FFFFFF 0% 0% no-repeat padding-box;
+        border: 1px solid #EDEDED;
+        border-radius: 10px;
+        opacity: 1;
+        position: absolute;
+        top: 800px;
+        left: 30px;
+        color:#3D087B;
+        }
+        
+}
 
 
 .time{
@@ -221,17 +478,75 @@ color:#3D087B;
 .hour{
     margin-top: 20px;
     margin-left: 80px;
+   
+
+
+}
+@media(min-width:300px) and (max-width:800px){
+   .hour{
+
+    background-image: url("./light.png");
+    position:absolute;
+    margin:5px;
+    height:80px;
+    width: 40px;
+    position: absolute;
+    left:70px;
+    top:20px;
+
+}
 }
 .min{
     margin-top: 20px;
     margin-left: 20px;
 }
+@media(min-width:300px) and (max-width:800px){
+    .min{
+ 
+     background-image: url("./light.png");
+     position:absolute;
+     margin:5px;
+     height:80px;
+     width: 40px;
+     position: absolute;
+     left:140px;
+     top:20px;
+ 
+ }
+}
 .sec{
     margin-top: 20px;
     margin-left: 20px;
 }
+@media (min-width:300px) and (max-width:800px){
+    .sec{
+ background-image: url("./light.png");
+     position:absolute;
+     margin:8px;
+     height:80px;
+     width: 40px;
+     position: absolute;
+     left:200px;
+     top:18px;
+ 
+ }
+}
 .am{
     margin-left: 20px;
+}
+@media(min-width:300px) and (max-width:800px){
+    .am{
+ 
+     background-image: url("./light.png");
+     position:absolute;
+     margin:5px;
+     height:80px;
+     width: 40px;
+     position: absolute;
+     left:260px;
+     top:19px;
+ 
+ }
 }
 .two{
     width: 536px;
@@ -246,11 +561,36 @@ position: absolute;
 top: 212px;
 left: 746px;
 }
+@media(min-width:300px) and (max-width:800px){
+    .two{
+        width: 335px;
+    height: 118px;
+    background: var(--unnamed-color-ffffff) 0% 0% no-repeat padding-box;
+    border: 1px solid var(--unnamed-color-ededed);
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #EDEDED;
+    border-radius: 10px;
+    opacity: 1;
+    position: absolute;
+    top: 1000px;
+    left: 30px;
+    } 
+}
 
 .two1{
     color:#8E53F0;
     font: normal normal 900 28px/38px Bauhaus Hv BT;
     padding-top: 10px;
+}
+@media(min-width:300px) and (max-width:800px){
+    .two1{
+        color:#8E53F0;
+        font: normal normal 900 28px/38px Bauhaus Hv BT;
+        padding-top: 10px;
+        position:absolute;
+        top:0px;
+
+    }
 }
 
 .window{
@@ -262,6 +602,23 @@ left: 746px;
     left: 747px;
     border-radius: 10px;
     background-color: #FFFFFF;
+    background-image: url("./wind.png");
     
     
+}
+@media(min-width:300px) and (max-width:800px){
+    .window{
+       
+        border-radius: 10px;
+        position: absolute; 
+        top: 1150px;
+        left: 30px;
+        border-radius: 10px;
+        
+        background-image: url("./wind.png");
+        background-repeat: no-repeat;
+        width: 335px;
+        height: 400px;
+        
+    }
 }
