--- a/style.css
+++ b/style.css
@@ -296,12 +296,12 @@
      @media (min-width:300px) and (max-width:800px){
         .good1{
         
-            
+            font-size: 16px;
             position: absolute;
             top: 518px;
             left:25px;
             color: #FFFFFF;
-            font: normal normal 900 22px/28px Bauhaus Hv BT;
+            /* font: normal normal 900 22px/28px Bauhaus Hv BT; */
            }
     } 
 button{
